
	* Added support for auto-passphrase authentication from the
	  config file during connecting which was not implemented
	  yet.  Affected file irssi/src/silc/core/client_ops.c.

	* Fixed a bug in authentication protocol failure handling which
	  was processing wrong callback context.  Affected files
	  are lib/silcclient/client.c and protocol.c.

Thu Oct 17 23:45:12 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Fixed string formatting crashbug in lib/silccore/silcattrs.c.

	* Fixed mask attribute adding in Irssi SILC client.  Affected
	  file irssi/src/silc/core/silc-queries.c.

Thu Oct 17 16:40:39 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added support for saving the requested attributes in
	  WHOIS to directory.  Affected file is
	  irssi/src/silc/core/silc-queries.c.

Wed Oct 16 17:40:56 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added support for parsing VCard fields that do not have
	  the TYPE= for types.  Affected file lib/silcutil/silcvcard.c.

	* Fixed a double free bug in hash table foreach function
	  if the entry was deleted in the foreach callback.  Affected
	  file lib/silcutil/silchashtable.c.

Tue Oct 15 18:05:24 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Added silc_attribute_get_verify_data to return the signature
	  verification data for either user digital signature or
	  server digital signature in Requested Attributes.  Affected
	  files are lib/silccore/silcattrs.[ch].

	* Added silc_vcard_alloc which is used to allocated dynamic
	  SilcVCard context.  The silc_vcard_free now checks whether
	  the context is dynamically allocated or not.  Affected files
	  are lib/silcutil/silcvcard.[ch].

Mon Oct 14 17:55:44 EEST 2002  Pekka Riikonen <priikone@silcnet.org>

	* Periodically remove the NOATTR status from client entry
	  so that the client may take the attributes in use even after
	  server has resolved them unsuccessfully earlier.  Affected
	  file silcd/server_query.c and idlist.h.
